Feature #19668 Add configuration file for list of supported licenses
https://redmine.biodiversity.agr.gc.ca/issues/19668

* formatted according to checkstyle